--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
 * {
     line-height: 1.5;
+    margin: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 150;
 }
